johnson_mitchell.assignment-1.09/nbproject/private/Default-build.log
Compiling rlg327.cpp
rlg327.cpp: In function ‘int main(int, char**)’:
rlg327.cpp:254:47: error: format not a string literal and no format arguments [-Werror=format-security]
   printf(pc_is_alive(&d) ? victory : tombstone);
                                               ^
cc1plus: all warnings being treated as errors
make: *** [rlg327.o] Error 1
